--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,3 @@ code {
 html {
   scroll-behavior: smooth !important;
 }
-
-/* * {
-  outline: 1px solid #f00 !important;
-} */
